<resources>
    <string name="app_name">Calculadora</string>
    <string name="btn_suma">+</string>
    <string name="btn_resta">-</string>
    <string name="btn_multiplicacion">*</string>
    <string name="btn_division">÷</string>
    <string name="btn_resetear">AC</string>
    <string name="numero1"> Numero 1</string>
    <string name="numero2"> Numero 2</string>
    <string name="resultado"> Resultado </string>
    <string name="calculadora"> CALCULADORA </string>
    <string name="firma"> by Eliana Torres </string>

</resources>